Landing page and navbar
Menu de navegacion, landing page , logo , primera seccion finalizada

--- a/index.html
+++ b/index.html
@@ -14,7 +14,38 @@
 </head>
 <body>
     <div class="main">
-        
+        <div class="navbars">
+            <div class="navContainer">
+                <div class="navbarContent">
+                    <span class="logo">
+                        sal&Salsa
+                    </span>
+                    <ul>
+                        <li><a href="#1" class="active">Inicio</a></li>
+                        <li><a href="#2">Nosotros</a></li>
+                        <li><a href="#3">Menu</a></li>
+                        <li><a href="#4">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="firstSection" id="1">
+            <div class="firstContent">
+                <img src="public/logo@2x.png" alt="sal&Salsa logo" class="logoSal">
+                <h1 class="primaryText">
+                    Sabores que <span class="bigS">exaltan</span> tus sentidos
+                </h1>
+            </div>
+        </div>
+        <div class="secondSection" id="2">
+
+        </div>
+        <div class="thirdSection" id="3">
+
+        </div>
+        <div class="fourthSection" id="4">
+
+        </div>
     </div>
 
 
