--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- BOOTSTRAP CDNJ -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
     <!-- LOCAL STYLES -->
     <link rel="stylesheet" href="css/styles.css">
@@ -17,39 +17,89 @@
         <div class="navbars">
             <div class="navContainer">
                 <div class="navbarContent">
-                    <span class="logo">
-                        sal&Salsa
-                    </span>
+                    <a href="#1" style="text-decoration: none;">
+                        <span class="logo">
+                            sal<span class="and">&</span>Salsa 
+                        </span>
+                    </a>
                     <ul>
-                        <li><a href="#1" class="active">Inicio</a></li>
-                        <li><a href="#2">Nosotros</a></li>
-                        <li><a href="#3">Menu</a></li>
-                        <li><a href="#4">Contacto</a></li>
+                        <li><a href="#1" style="text-decoration: none;" class="active">Inicio</a></li>
+                        <li><a href="#2" style="text-decoration: none;">Nosotros</a></li>
+                        <li><a href="#3" style="text-decoration: none;">Menu</a></li>
+                        <li><a href="#4" style="text-decoration: none;">Contacto</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="firstSection" id="1">
             <div class="firstContent">
-                <img src="public/logo@2x.png" alt="sal&Salsa logo" class="logoSal">
-                <h1 class="primaryText">
-                    Sabores que <span class="bigS">exaltan</span> tus sentidos
-                </h1>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block mx-auto" src="/public/foto2@2x.png" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                          <img src="public/logo@2x.png" alt="sal&Salsa logo" class="logoSal">
+                          <h1 class="primaryText">
+                              Sabores que <span class="bigS">exaltan</span> tus sentidos
+                          </h1>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block mx-auto" src="/public/foto1@2x.png" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                          <img src="/public/eventos.png" alt="" class="eventos">
+                          <h1 class="primaryText">
+                            Organizamos tu evento !
+                          </h1>
+                          <p class="secondaryText">te ofrecemos un lugar único y con encanto donde celebrar tu cumpleaños, tu aniversario o tu fiesta privada, con toda clase de detalles, a tu medida.</p>
+                        </div> 
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block mx-auto" src="/public/foto5@2x.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                          <img src="/public/birthday.png" alt="" class="birthday">
+                          <h1 class="primaryText">
+                            Estás cumpliendo años?
+                          </h1>
+                          <p class="thirdText">
+                            Si vienes a nuestro restaurante en el día de tu cumpleaños ,<br>
+                            tendras un
+                            <span class="descuento">50% de descuento*</span>
+                          </p>
+                        </div> 
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
             </div>
         </div>
         <div class="secondSection" id="2">
-
+            <h1 class="example">SECTION 2</h1>
         </div>
         <div class="thirdSection" id="3">
-
+            <h1 class="example">SECTION 3</h1>
         </div>
         <div class="fourthSection" id="4">
-
+            <h1 class="example">SECTION 4</h1>
         </div>
     </div>
 
 
     <!-- BOOTSTRAP CDNJS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
