--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block mx-auto" src="/public/foto2@2x.png" alt="First slide">
+                        <img class="d-block mx-auto" src="public/foto2@2x.png" alt="First slide">
                         <div class="carousel-caption d-none d-md-block">
                           <img src="public/logo@2x.png" alt="sal&Salsa logo" class="logoSal">
                           <h1 class="primaryText">
@@ -50,9 +50,9 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block mx-auto" src="/public/foto1@2x.png" alt="Second slide">
+                        <img class="d-block mx-auto" src="public/foto1@2x.png" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
-                          <img src="/public/eventos.png" alt="" class="eventos">
+                          <img src="public/eventos.png" alt="" class="eventos">
                           <h1 class="primaryText">
                             Organizamos tu evento !
                           </h1>
@@ -60,9 +60,9 @@
                         </div> 
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block mx-auto" src="/public/foto5@2x.jpg" alt="Third slide">
+                        <img class="d-block mx-auto" src="public/foto5@2x.jpg" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
-                          <img src="/public/birthday.png" alt="" class="birthday">
+                          <img src="public/birthday.png" alt="" class="birthday">
                           <h1 class="primaryText">
                             Estás cumpliendo años?
                           </h1>
