--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     
     <!-- LOCAL STYLES -->
     <link rel="stylesheet" href="css/styles.css">
@@ -14,7 +15,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="navbars">
+        <nav class="list-group navbars" id="list-example">
             <div class="navContainer">
                 <div class="navbarContent">
                     <a href="#1" style="text-decoration: none;">
@@ -23,34 +24,35 @@
                         </span>
                     </a>
                     <ul>
-                        <li><a href="#1" style="text-decoration: none;" class="active">Inicio</a></li>
-                        <li><a href="#2" style="text-decoration: none;">Nosotros</a></li>
-                        <li><a href="#3" style="text-decoration: none;">Menu</a></li>
-                        <li><a href="#4" style="text-decoration: none;">Contacto</a></li>
+                        <li><a href="#list-item-1" style="text-decoration: none;" class="list-group-item list-group-item-action">Inicio</a></li>
+                        <li><a href="#list-item-2" style="text-decoration: none;" class="list-group-item list-group-item-action">Nosotros</a></li>
+                        <li><a href="#list-item-3" style="text-decoration: none;" class="list-group-item list-group-item-action">Menu</a></li>
+                        <li><a href="#list-item-4" style="text-decoration: none;" class="list-group-item list-group-item-action">Contacto</a></li>
                     </ul>
                 </div>
             </div>
-        </div>
-        <div class="firstSection" id="1">
+          </nav>
+        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+        <div class="firstSection" id="list-item-1">
             <div class="firstContent">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img loading="lazy" class="d-block mx-auto" src="public/foto2@2x.png" alt="First slide">
-                        <div class="carousel-caption d-none d-md-block">
-                          <img loading="lazy" src="public/logo@2x.png" alt="sal&Salsa logo" class="logoSal">
-                          <h1 class="primaryText">
-                              Sabores que <span class="bigS">exaltan</span> tus sentidos
-                          </h1>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img loading="lazy" class="d-block mx-auto" src="public/foto1@2x.png" alt="Second slide">
+              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img loading="lazy" class="d-block" src="public/foto2@2x.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                      <img loading="lazy" src="public/logo@2x.png" alt="sal&Salsa logo" class="logoSal">
+                      <h1 class="primaryText">
+                          Sabores que <span class="bigS">exaltan</span> tus sentidos
+                      </h1>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img loading="lazy" class="d-block" src="public/foto1@2x.png" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
                           <img loading="lazy" src="public/eventos.png" alt="" class="eventos">
                           <h1 class="primaryText">
@@ -58,9 +60,9 @@
                           </h1>
                           <p class="secondaryText">te ofrecemos un lugar único y con encanto donde celebrar tu cumpleaños, tu aniversario o tu fiesta privada, con toda clase de detalles, a tu medida.</p>
                         </div> 
-                      </div>
-                      <div class="carousel-item">
-                        <img loading="lazy" class="d-block mx-auto" src="public/foto5@2x.jpg" alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img loading="lazy" class="d-block mx-auto" src="public/foto5@2x.jpg" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
                           <img loading="lazy" src="public/birthday.png" alt="" class="birthday">
                           <h1 class="primaryText">
@@ -72,34 +74,35 @@
                             <span class="descuento">50% de descuento*</span>
                           </p>
                         </div> 
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
                   </div>
+                </div>
+                <button style="z-index: 0;" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button style="z-index: 0;" class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             </div>
         </div>
-        <div class="secondSection" id="2">
+        <div class="secondSection" id="list-item-2">
             <h1 class="example">SECTION 2</h1>
         </div>
-        <div class="thirdSection" id="3">
+        <div class="thirdSection" id="list-item-3">
             <h1 class="example">SECTION 3</h1>
         </div>
-        <div class="fourthSection" id="4">
+        <div class="fourthSection" id="list-item-4">
             <h1 class="example">SECTION 4</h1>
         </div>
+      </div>
     </div>
 
 
     <!-- BOOTSTRAP CDNJS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="sans.js"></script>
 </body>
 </html>
