--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <img src="" class="card-img-top"  id="img" alt="">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <a href="#list-item-5" style="text-decoration: none; background-color: rgb(255, 169, 130);" class="list-group-item list-group-item-action">Contacto</a>
       </div>
     </div>
   </div>
