--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,19 +10,189 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- LOCAL STYLES -->
-    <link rel="stylesheet" href="css/nosotros_styles.css">
-    <title>Document</title>
+    <!--  kits font-awesome -->
+    <script src="https://kit.fontawesome.com/c561b4aeb1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/nosotros_style.css">
+    <title>Nosotros</title>
 </head>
 
 <body>
+    <!------------Barra de navegación----------->
 
-    <div class="main">
+    <nav class="navbar navbar-expand-lg bg-dark fondo-nav sticky-top" id="menu-navegacion">
+        <div class="container my-1">
+            <a href="index.html" class="navbar-bran">
+                <img class="img-fluid " src="imagenes/logoNav@2x.png" alt="" />
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon bg-light"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item btn-dark">
+                        <button type="button" class="btn btn-dark fs-6 ">NOSOTROS</button>
+                    </li>
+                    <li class="nav-item btn-dark">
+                        <button type="button" class="btn btn-dark fs-6 ">MENÚ</button>
+                    </li>
+                    <li class="nav-item btn-dark">
+                        <button type="button" class="btn btn-dark fs-6 ">SERVICIOS</button>
+                    </li>
+                    <li class="nav-item btn-dark">
+                        <button type="button" class="btn btn-dark fs-6 ">CONTÁCTANOS</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-------------sección reseña----------->
+
+    <section id="intro ">
+        <div class="container ">
+            <div class="row my-5 ">
+                <div class="col-sm-12 col-md-6 ">
+                    <img class="img-fluid " src="imagenes/foto_ppal.png " alt=" ">
+                </div>
+
+                <div class="col-sm-12 col-md-6 ">
+                    <h2>
+                        <strong>SOBRE NOSOTROS</strong>
+                    </h2>
+                    <p class="mt-5 ">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio soluta aperiam voluptas repellendus ipsa ducimus maiores assumenda incidunt iste itaque, suscipit ipsum quia eius qui iure doloremque officia repellat nemo. Lorem ipsum dolor sit amet consectetur,
+                        adipisicing elit. Odio soluta aperiam voluptas repellendus ipsa ducimus maiores assumenda incidunt iste itaque, suscipit ipsum quia eius qui iure doloremque officia repellat nemo Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Odio soluta aperiam voluptas repellendus ipsa ducimus maiores assumenda incidunt iste itaque, suscipit ipsum quia eius qui iure doloremque officia repellat nemo. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio
+                        soluta aperiam voluptas repellendus ipsa ducimus maiores assumenda incidunt iste itaque, suscipit ipsum quia eius qui iure doloremque officia repellat nemo Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio soluta aperiam
+                        voluptas repellendus ipsa ducimus maiores assumenda incidunt iste itaque, suscipit ipsum quia eius qui iure doloremque officia repellat nemo. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio soluta aperiam voluptas
+                        repellendus ipsa ducimus maiores assumenda incidunt iste itaque, suscipit ipsum quia eius qui iure doloremque officia repellat nemo.
+                    </p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe provident adipisci reiciendis dicta itaque similique placeat neque, distinctio porro nesciunt aliquid minus consectetur! Cum beatae ipsa voluptatibus est quasi dolorem?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!----seccion equipo de trabajo--->
+
+    <section id="equipo">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 mt-5 p-5 text-center">
+                    <img class="img-thumbnail " src="imagenes/administrador.png " alt=" " />
+                    <h3 class="fs-4">Juan Gómez</h3>
+                    <hr class="accessory">
+                    <p class="fs-5">Administrador</p>
+                </div>
+
+                <div class="col-4 mt-5 p-5 text-center">
+                    <img class="img-thumbnail" src="imagenes/chef_pastelero.jpg " alt=" " />
+                    <h3 class="fs-4">Andrés Castilla</h3>
+                    <hr class="accessory">
+                    <p class="fs-5">Chef ejecutivo</p>
+                </div>
+
+                <div class="col-4 mt-5 p-5 text-center">
+                    <img class="img-thumbnail" src="imagenes/chef_ejecutivo.jpg " alt=" " />
+                    <h3 class="fs-4">Manuel López</h3>
+                    <hr class="accessory">
+                    <p class="fs-5">Chef Pastelero</p>
+                </div>
+
+                <div class="col-4  mb-5 p-5 text-center ">
+                    <img class="img-thumbnail" src="imagenes/asistente_chef.jpg " alt=" " />
+                    <h3 class="fs-4">Fernando Lopéz Guillén</h3>
+                    <hr class="accessory">
+                    <p class="fs-5">Asistente de Chef</p>
+                </div>
+
+                <div class="col-4  mb-5 p-5 text-center">
+                    <img class="img-thumbnail" src="imagenes/asistente_pastelero.jpg " alt=" " />
+                    <h3 class="fs-4">Ana Luisa Hernández</h3>
+                    <hr class="accessory">
+                    <p class="fs-5">Asistente Pastelera</p>
+                </div>
+                <div class="col-4  mb-5 p-5 text-center">
+                    <img class="img-thumbnail" src="imagenes/asistente_chef2.jpg " alt=" " />
+                    <h3 class="fs-4">Carlos Lugo</h3>
+                    <hr class="accessory">
+                    <p class="fs-5">Asistente de Chef</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-------------sección testimonio----------->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner d-inline-flex">
+            <div class="container img-fluid my-5 ">
+                <div class="carousel-item active fs-2">
+                    <img class="img-thumbnail" src="imagenes/persona1.jpg" alt="">
+                    <p>"Voluptatum dolorem architecto sequi, porro ut dolor odit reiciendis fugit officia adipisci, dolores dicta neque. Quidem aspernatur, impedit velit suscipit rerum error."</p>
+                </div>
+                <div class="carousel-item fs-2">
+                    <img class="img-thumbnail" src="imagenes/persona2.jpg" class="d-block w-20" alt="">
+                    <p>"Architecto sequi, porro ut dolor odit reiciendis fugit officia adipisci, dolores dicta neque. Quidem aspernatur, impedit velit suscipit rerum error".</p>
+                </div>
+                <div class="carousel-item fs-2">
+                    <img class="img-thumbnail" src="imagenes/persona3.jpg" class="d-block w-20" alt="">
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dolorem architecto sequi, porro ut dolor odit reiciendis fugit officia adipisci, dolores dicta neque. Quidem aspernatur, impedit velit suscipit rerum error."</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon bg-secondary" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon bg-secondary" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
     </div>
 
+    <!-----------footer------->
+    <footer>
+        <section id="footer">
+            <div class="container py-3 img-fluid">
+                <div class="row mt-5">
+                    <div class="col-sm-12 col-md-4 text-center text-black">
+                        <img class="align-items-center" src="imagenes/logo@2x.png" alt="">
+                    </div>
+
+                    <div class="col-sm-12 col-md-4 text-center text-black">
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <button class="btn btn-primary">RESERVAS</button>
+                            <button class="btn btn-primary">CONTÁCTANOS</button>
+                            <button class="btn btn-primary">MAPA DEL SITIO</button>
+                        </div>
+                        <p class="mt-5">
+                            <p></p>reservas@mail.com</p>
+                        <i class="fas fa-map-marker-alt"></i>Calle 12 b # 12-33 Bogotá-Colombia
+                        <br />
+                        <i class="fas fa-phone">57 345-3457</i>
+                        </p>
+                        <br>
+                        <p>@Copyright 2021</p>
+                    </div>
+
+                    <div class="col-sm-12 col-md-4 text-center text-black">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.9650425750146!2d-74.0766206857369!3d4.600284343802221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99a71c07323b%3A0x25d34578e64f16d5!2sCl.%2012b%20%23%23%207-12%2C%20Bogot%C3%A1%2C%20Cundinamarca!5e0!3m2!1ses!2sco!4v1631415614809!5m2!1ses!2sco"
+                            width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <!-- BOOTSTRAP CDNJS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj " crossorigin="anonymous "></script>
 </body>
 
 </html>
