--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
               </div>
             </div>
         </div>
+
         <div class="secondSection" id="list-item-2">
             <h1 class="example">SECTION 2</h1>
         </div>
-        <div class="thirdSection position-relative" id="list-item-3">
-            <h2 class="title">Menu</h2>
+        <div class="thirdSection" id="list-item-3">
+                      <h2 class="title">Menu</h2>
 
           <div class="container-cards" id="containerId">
           
@@ -123,18 +124,19 @@
           </div> 
           
         </div>
-        <div class="secondSection" id="list-item-4">
+        <div class="fourthSection" id="list-item-4">
           <h1 class="example">SECTION 4</h1>
         </div>
-        <div class="fourthSection" id="list-item-5">
+        <div class="fifthSection" id="list-item-5">
             <h1 class="example">SECTION 5</h1>
         </div>
+
+
       </div>
     </div>
 
 
     <!-- BOOTSTRAP CDNJS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="sans.js"></script>
 <script type="text/javascript" src="js/menu.json"></script>
