--- a/index.html
+++ b/index.html
@@ -106,15 +106,18 @@
       </div>
 
       <div class="secondSection" id="list-item-2">
-        <h1 class="example">SECTION 2</h1>
+        <div class="secondSectionContainer">
+          <h1>Nuestra propuesta</h1>
+        </div>
       </div>
       <div class="thirdSection" id="list-item-3">
         <div class="header-menu">
+          <img class="menu-borders" src="public/borders.png" alt="">
           <img class="icon-menu" src="public/menu.svg" alt="">
           <h1 class="title-menu">Nuestro menu</h1>
         </div>
         <div class="cards-content">
-          <div class="row row-cols-1 row-cols-md-3 g-4" id="containerId">
+          <div class="row row-cols-1 row-cols-md-5 g-4" id="containerId">
 
           </div>
         </div>
