done some stuff
p

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/contacto.css">
   <link rel="stylesheet" href="css/cards.css">
+  <link rel="stylesheet" href="css/propuesta.css">
   <title>Document</title>
 </head>
 
@@ -107,7 +108,21 @@
 
       <div class="secondSection" id="list-item-2">
         <div class="secondSectionContainer">
-          <h1>Nuestra propuesta</h1>
+          <div class="header-nosotros">
+            <h1>Nuestra propuesta</h1>
+            <p>Lorem ipsum dolor sit sectetur adipisicing elit. Veritatis mollitia impedit libero alias odio.</p>
+            <div class="underline"></div>
+          </div>
+          <div class="row row-cols-2">
+            <div class="col">
+              <img class="img-propuesta" src="public/perma.jpg" alt="">           
+            </div>
+            <div class="col">
+              <p class="texto-propuesta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe earum eveniet vero nulla, consequuntur illo, sed ratione debitis blanditiis eius nisi assumenda? Inventore, illo nemo quasi vel minus a? In?
+              Consequatur nemo nam vel! In quibusdam porro amet ex iste possimus assumenda quasi a laboriosam?<br><br> Necessitatibus molestiae officiis vel delectus praesentium recusandae optio libero odio aliquam, consequuntur cum enim blanditiis.</p>
+              <img class="img-firma" src="public/firma.png" alt=""> 
+            </div>
+          </div>
         </div>
       </div>
       <div class="thirdSection" id="list-item-3">
@@ -118,8 +133,9 @@
         </div>
         <div class="cards-content">
           <div class="row row-cols-1 row-cols-md-5 g-4" id="containerId">
-
+            
           </div>
+          <img class="menu-borders-2" src="public/borders.png" alt="">
         </div>
 
         <div id="modal">
