--- a/index.html
+++ b/index.html
@@ -381,12 +381,12 @@
         <footer>
           <div class="container">
             <div class="row-footer row row-cols-3">
-              <div class="col">
+              <div class="mon1 col">
                 <div id="ft1">
                   <img class="logo-footer" src="./public/logo@2x.png" alt="Logo" srcset="">
               </div>
               </div>
-              <div class="col">
+              <div class="mon2 col">
                 <div id="ft2">
                   <a href="#1">MAPA DEL SITIO</a>
                   <a href="#4">CONTACTANOS</a>
@@ -402,7 +402,7 @@
                   </div>
               </div>
               </div>
-              <div class="col">
+              <div class="mon3 col">
                 <div class="mapouter"><div class="gmap_canvas"><iframe width="300px" height="80%" id="gmap_canvas" src="https://maps.google.com/maps?q=4.628431090493444,%20-74.06932150104204&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:200px;width:200px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:200px;}</style></div></div>
               </div>
             </div>
