--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         </div>
       </div>
       <div class="fourthSection " id="list-item-4">
-        <h1 class="example">Servicios</h1>
+        <h1 class="example servi">Servicios</h1>
        
             <div class=" father  d-flex flex-wrap justify-content-center flex-grow-5">
 
@@ -420,7 +420,7 @@
                 </div>
                 <img src="imagenes/cumple.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
+                  <h5 class="card-title ">Special title treatment</h5>
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                   
                 </div>
