--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
           </div>
         </div>
         <footer>
-          <div class="container">
+          <div class="footer-content container">
             <div class="row-footer row row-cols-3">
               <div class="mon1 col">
                 <div id="ft1">
