--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
               </div>
               <div class="mon2 col">
                 <div id="ft2">
-                  <a href="#1">MAPA DEL SITIO</a>
+                  <a href="mapa.html">MAPA DEL SITIO</a>
                   <a href="#4">CONTACTANOS</a>
                   <a href="#3">RESERVAS</a>
                   <br>
