--- a/mapa.html
+++ b/mapa.html
@@ -35,15 +35,15 @@
             </span>
           </a>
           <ul class="menuNav">
-            <li class="nav-item"><a href="#list-item-1" style="text-decoration: none;"
+            <li class="nav-item"><a href="index.html#list-item-1" style="text-decoration: none;"
                 class="list-group-item list-group-item-action">Inicio</a></li>
-            <li class="nav-item"><a href="#list-item-2" style="text-decoration: none;"
+            <li class="nav-item"><a href="index.html#list-item-2" style="text-decoration: none;"
                 class="list-group-item list-group-item-action">Nosotros</a></li>
-            <li class="nav-item"><a href="#list-item-3" style="text-decoration: none;"
+            <li class="nav-item"><a href="index.html#list-item-3" style="text-decoration: none;"
                 class="list-group-item list-group-item-action">Menu</a></li>
-            <li class="nav-item"><a href="#list-item-4" style="text-decoration: none;"
+            <li class="nav-item"><a href="index.html#list-item-4" style="text-decoration: none;"
                 class="list-group-item list-group-item-action">Servicios</a></li>
-            <li class="nav-item"><a href="#list-item-5" style="text-decoration: none;"
+            <li class="nav-item"><a href="index.html#list-item-5" style="text-decoration: none;"
                 class="list-group-item list-group-item-action">Contacto</a></li>
           </ul>
           <div class="hamburger">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="mon2 col">
                   <div id="ft2">
-                    <a href="#1">MAPA DEL SITIO</a>
+                    <a href="mapa.html">MAPA DEL SITIO</a>
                     <a href="#4">CONTACTANOS</a>
                     <a href="#3">RESERVAS</a>
                     <br>
