--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         type="button"
         class="btn btn-floating btn-lg"
         id="btn-back-to-top"
+        onclick="topFunction()"
         >
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill="white" fill-rule="evenodd" d="M3.47 7.78a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 0l4.25 4.25a.75.75 0 01-1.06 1.06L9 4.81v7.44a.75.75 0 01-1.5 0V4.81L4.53 7.78a.75.75 0 01-1.06 0z"></path></svg>
 </button>
@@ -509,7 +510,7 @@
 
             </div>
             
-            <a href="#list-item-5" class="btn m-5">Contactar</a>
+            <a href="#list-item-5" class="btn m-5">Reserva en linea</a>
       
       </div>
 
