--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               </div>
               <div class="col-sm">
                 <img src="public/menu@2x.png" alt="" class="menu2">
-                <a href="#list-item-3" class="btn btn-primary" id="consultarMenu" >Consultar el menu</a>
+                <a href="pedido.html" class="btn btn-primary" id="consultarMenu" >Haz tú pedido</a>
               </div>
             </div>
           </div>
