--- a/pedido.html
+++ b/pedido.html
@@ -57,7 +57,17 @@
     
         <!-- BEGININ -->
         <div class="mapaSitio">
-            <div class="container" style="height: 110vh;">
+          <div style="position: fixed; top: 6em; right: 0;" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+              <img style="width: 2em;" src="imagenes/alert.png" class="rounded mr-2" alt="...">
+              <strong style="margin-left:2em;" class="mr-auto">sal&Salsa</strong>
+
+            </div>
+            <div class="toast-body">
+              Elemento <span style="color:var(--cl-tertiary)" class="elementAdded"></span> añadido exitosamente !
+            </div>
+          </div>
+            <div class="container">
                 <h1>Haz tu pedido</h1>
                 <div class="contentCard row">
         
@@ -112,6 +122,7 @@
   <script src="view.js"></script>
   <script src="controller.js"></script>
   <script src="add.js"></script>
+  
 </body>
 
 </html>
