modul formulario reserva

--- a/index.html
+++ b/index.html
@@ -633,28 +633,28 @@
                             <div class="px-4">
                                 <div class="mb-3">
                                     <label for="inputNombre" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="inputNombre" placeholder="Escriba su nombre" required/>
+                                    <input type="text" name="nombre" class="form-control" id="inputNombre" placeholder="Escriba su nombre" required/>
                                     <div class="invalid-feedback">Completa el campo</div>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="inputApellido" class="form-label">Apellido</label>
-                                    <input type="text" class="form-control" id="inputApellido" placeholder="Escriba su apellido" required/>
+                                    <input type="text" name="apellido" class="form-control" id="inputApellido" placeholder="Escriba su apellido" required/>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="inputEmail4" class="form-label">Correo Electrónico</label>
-                                    <input type="email" class="form-control" id="inputEmail4" placeholder="nombre@ejemplo.com" required/>
+                                    <input type="email" name="email" class="form-control" id="inputEmail4" placeholder="nombre@ejemplo.com" required/>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="inputTelefono" class="form-label">Número de Teléfono</label>
-                                    <input type="number" class="form-control" placeholder="Número de teléfono" required/>
+                                    <input type="number" name="telefono" class="form-control" placeholder="Número de teléfono" required/>
                                 </div>
 
                                 <div class="mb-3">
                                     <label for="inputNumeroPersonas" class="form-label">Cantidad de Personas</label>
-                                    <input type="number" class="form-control" id="inputNumeroPersonas" placeholder="Cantidad de personas" required/>
+                                    <input type="number" name="numeroPersonas" class="form-control" id="inputNumeroPersonas" placeholder="Cantidad de personas" required/>
                                 </div>
 
                                 <!------Seleccionar el servicio----->
@@ -675,11 +675,11 @@
                                 <div class="row mb-3">
                                     <div class="col-6">
                                         <label for="inputFechaReservacion" class="form-label">Fecha</label>
-                                        <input id="inputFechaReservacion" class="form-control" type="date" required/>
+                                        <input id="inputFechaReservacion" name="fecha" class="form-control" type="date" required/>
                                     </div>
                                     <div class="col-6">
                                         <label for="inputHoraReservacion" class="form-label">Hora</label>
-                                        <input id="inputHoraReservacion" class="form-control" type="time" required/>
+                                        <input id="inputHoraReservacion" name="hora" class="form-control" type="time" required/>
                                     </div>
                                 </div>
 
