--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 
   <!-- LOCAL STYLES -->
   <link rel="stylesheet" href="css/styles.css">
@@ -64,6 +65,8 @@
                 class="list-group-item list-group-item-action">Servicios</a></li>
             <li class="nav-item"><a href="#list-item-5" style="text-decoration: none;"
                 class="list-group-item list-group-item-action">Contacto</a></li>
+                <li class="nav-item"><a href="car.html" style="text-decoration: none;"
+                  class="list-group-item list-group-item-action"><i class="fas fa-shopping-cart"></i></a></li>
           </ul>
           <div class="hamburger">
             <span class="bar"></span>
